feat(24787): ffi for libsodium
Signed-off-by: mxtartaglia <maxi@swirldslabs.com>